--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/uuid": "^8.3.4",
     "gh-pages": "^4.0.0",
     "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
@@ -19,6 +20,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.53.0",
     "typescript": "^4.4.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
